--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "sawo": "^1.0.1",
+    "sawo-react": "^1.0.6",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1"
   },
