--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
+    "react-particles-js": "^3.6.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "sawo": "^1.0.1",
     "styled-components": "^5.3.3",
+    "tsparticles": "^1.37.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
