--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-typed": "^1.2.0",
     "sawo": "^1.0.1",
     "styled-components": "^5.3.3",
     "tsparticles": "^1.37.3",
