Landing Page added

--- a/package.json
+++ b/package.json
@@ -7,6 +7,15 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "aos": "^2.3.4",
+    "gsap": "^3.8.0",
+    "lax": "^0.0.40",
+    "lax.js": "1.2.5",
+    "node-sass": "^4.0.0",
+    "react-gsap": "^3.2.1",
+    "react-responsive-carousel": "^3.2.22",
+    "react-script-tag": "^1.1.2",
+    "react-video-scroll": "^1.0.1",
+    "use-lax": "3.1.0",
     "bootstrap": "^5.1.1",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
